Notifications steal focus and show up in the task bar
Categories
(Toolkit :: Alerts Service, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr115 | --- | unaffected |
firefox122 | --- | unaffected |
firefox123 | --- | wontfix |
firefox124 | --- | verified |
firefox125 | --- | verified |
People
(Reporter: adrian, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(3 files)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:123.0) Gecko/20100101 Firefox/123.0
Steps to reproduce:
Receive a notification from any website.
Actual results:
The notification showed a blank entry in my taskbar, and took the focus from whatever was focused before. In fact, incoming notifications from Slack interrupted me writing this text multiple times.
Expected results:
Like before, notifications should not show up in the taskbar, nor be automatically focused.
Comment 1•1 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Toolkit::Alerts Service' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Comment 2•1 years ago
|
||
This sounds a lot like bug 1869796 and seems like it's using XUL. Can you also take a screenshot of what your notification look like e.g. from https://www.bennish.net/web-notifications.html ? And can you check alerts.useSystemBackend
in about:config?
Comment 3•1 years ago
|
||
Actually, I can reproduce this with alerts.useSystemBackend
disabled. This should be a regression, I'll check.
Comment 4•1 years ago
|
||
Oh but still, can you check the value of alerts.useSystemBackend
from about:config? XUL shouldn't be used on Windows in the first place.
Yes, I have alerts.useSystemBackend
set to false because there was something I found annoying with the native notifications (I don't remember what it was).
Comment 6•1 years ago
|
||
(In reply to Adrian from comment #5)
Yes, I have
alerts.useSystemBackend
set to false because there was something I found annoying with the native notifications (I don't remember what it was).
For now I would recommend turning it back to true and report the pain if you remember it later. But still this is a critical bug as XUL is still used in Thunderbird. Thank you for your report!
Comment 7•1 years ago
|
||
mozregression points to bug 1870512.
Comment 8•1 years ago
|
||
:emilio, since you are the author of the regressor, bug 1870512, could you take a look? Also, could you set the severity field?
For more information, please visit BugBot documentation.
Assignee | ||
Comment 9•1 years ago
|
||
Assignee | ||
Updated•1 years ago
|
Updated•1 years ago
|
Comment 10•1 years ago
|
||
Set release status flags based on info from the regressing bug 1870512
Assignee | ||
Comment 11•1 years ago
|
||
Comment 12•1 years ago
|
||
Emilio, could you please assign Priority/Severity settings to this report when you get a chance?
Assignee | ||
Comment 13•1 years ago
|
||
S3 seems appropriate since it's disabled-by-default.
Updated•1 years ago
|
Comment 16•1 year ago
|
||
Thunderbird has this enabled by default, btw. Maybe S2?
Assignee | ||
Comment 17•1 year ago
|
||
(In reply to Kagami [:saschanaz] (they/them) from comment #16)
Thunderbird has this enabled by default, btw. Maybe S2?
Thunderbird is based off ESR, right?
Comment 18•1 year ago
|
||
(In reply to Emilio Cobos Álvarez (:emilio) from comment #17)
(In reply to Kagami [:saschanaz] (they/them) from comment #16)
Thunderbird has this enabled by default, btw. Maybe S2?
Thunderbird is based off ESR, right?
Yes, Thunderbird 115 (ESR) is not affected by it, only Thunderbird beta and daily are affected by this issue.
Comment 19•1 year ago
|
||
Comment 20•1 year ago
|
||
bugherder |
Updated•1 year ago
|
Issue is reproducible on Firefox 123.0 on Windows 10.
Verified as fixed on Firefox 124.0b5 and Firefox Nightly 125.0a1 on Windows 10 and macOS 12.
However, this issue is still reproduce on both Firefox 124.0b5 and 125.0a1(with alerts.useSystemBackend set to false) on Ubuntu 22.
Should I file a separate bug for Ubuntu only?
Thank you.
Assignee | ||
Comment 24•1 year ago
|
||
Is this on wayland or X11? And do you know if that's a regression? In any case, yeah, this bug was about windows.
Comment 25•1 year ago
|
||
Which means, yes please file a new bug.
I filled bug 1882975 for Ubuntu.
Updating flags based on Comment 23.
Description
•