widget/InitData.h
@@ -91,7 +91,6 @@ struct InitData {
   // when painting exclude area occupied by child windows and sibling windows
   bool mClipChildren = false;
   bool mClipSiblings = false;
-  bool mForMenupopupFrame = false;
   bool mRTL = false;
   bool mNoAutoHide = false;   // true for noautohide panels
   bool mIsDragPopup = false;  // true for drag feedback panels
